@@ -1,3 +1,9 @@
+TAG: genotypeload-6-0-2-2
+DATE: 01/21/2015
+STAFF: sc
+CHANGES:
+1) TR12057 RRIDs for genotypes
+
 TAG: genotypeload-6-0-2-1
 DATE: 12/11/2015
 STAFF: lec 
